<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name" translatable="false">smart-learn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="update_lesson">Update lesson</string>
    <string name="test">Test</string>
    <string name="image">image</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="add_lesson">Add Lesson</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="community">Community</string>
    <string name="lessons">Lessons</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="error_profile_name_is_same">Profile name was not changed</string>
    <string name="error_updating_user_display_name">Error while updating the profile. Your name was not changed.</string>
    <string name="error_deleting_user">Your account cannot be deleted</string>
    <string name="error_sensitive_deletion">This operation is sensitive and requires recent authentication. Log in again before retrying this request.</string>
    <string name="success_display_name_updated">Profile name was changed</string>
    <string name="success_account_deleted">Account was deleted</string>
    <string name="online">Common</string>
    <string name="delete_account">Delete account</string>
    <string name="email_and_password">Email and password</string>
    <string name="delete_account_description">Are you sure you want to delete your account?</string>
    <string name="profile_name_point">Profile name:</string>
    <string name="email_point">Email:</string>
    <string name="register_provider_point">Register provider:</string>
    <string name="register_time_point">Register time:</string>
    <string name="profile">Profile</string>
    <string name="notebook_summary">Notebook summary</string>
    <string name="user_icon">User icon</string>
    <string name="hi">Hi</string>
    <string name="account_overview">Account overview</string>
    <string name="expressions">Expressions</string>
    <string name="tests_summary">Tests summary</string>
    <string name="active">Active</string>
    <string name="finished">Finished</string>
    <string name="success_rate">Success rate</string>
    <string name="error_empty_credentials">Empty credentials</string>
    <string name="error_email_not_valid">Email address is not valid</string>
    <string name="error_password_too_short">Inserted password is too short. Use minimum</string>
    <string name="error_passwords_not_matching">Passwords not matching</string>
    <string name="error_authentication_failed">Authentication failed</string>
    <string name="error_register_failed">Register failed</string>
    <string name="error_verify_email_send">The verification email was not sent. Please try again later.</string>
    <string name="error_no_network">This device is not connected to a network</string>
    <string name="error_no_internet_connection">Internet is not available</string>
    <string name="error_weak_password">Password is too weak. Use at least one letter and one number.</string>
    <string name="error_invalid_email">Email is not valid</string>
    <string name="error_user_exists">This email already exists</string>
    <string name="error_login_failed">Login failed</string>
    <string name="error_user_not_exist">This account does not exist</string>
    <string name="error_invalid_login_credentials">Invalid login credentials</string>
    <string name="error_to_many_login_requests">Too many login requests. This account is temporally blocked. Try to reset the password or try to log in later.</string>
    <string name="error_email_not_verified">Email is not verified. We\'ve sent you a verification email.</string>
    <string name="error_emails_not_matching">Emails not matching</string>
    <string name="error_required">Required</string>
    <string name="error_profile_too_long">Choose a shorter profile name</string>
    <string name="error_email_is_required">Email is required</string>
    <string name="error_password_too_long">Inserted password is too long. Maxim</string>
    <string name="error_email_too_long">Email is too long</string>
    <string name="error_send_password_reset_email">The reset email was not sent. Please try again later.</string>
    <string name="error_google_login_failed">Google authentication failed</string>
    <string name="success_register_successfully">Register successfully, please verify your email address.</string>
    <string name="success_verify_email_send">A verification email was sent</string>
    <string name="success_send_password_reset_email">Reset email was send</string>
    <string name="verify_email">Please verify your email address</string>
    <string name="registering_user">Registering is made</string>
    <string name="sign_in_user">Signing in</string>
    <string name="characters">characters</string>
    <string name="are_allowed">are allowed</string>
    <string name="logout">Logout</string>
    <string name="intro">Authentication</string>
    <string name="continue_with_email">Continue with email</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="not_have_an_account">Not have an account?</string>
    <string name="register_with_email">Register with email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="profile_name">Profile name</string>
    <string name="retype_email">Retype Email</string>
    <string name="retype_password">Retype password</string>
    <string name="error_loading_screen">Error while loading screen</string>
    <string name="error_lesson_can_not_be_opened">Lesson cannot be opened</string>
    <string name="error_selected_item_can_not_be_opened">Selected item cannot be opened</string>
    <string name="error_lesson_name_too_long">Lesson name is too long</string>
    <string name="error_word_can_not_be_opened">Word cannot be loaded</string>
    <string name="error_lesson_name_is_same">Lesson name is the same</string>
    <string name="add_new">Add new</string>
    <string name="selected">Selected:</string>
    <string name="words">Words</string>
    <string name="lesson_name">Lesson name</string>
    <string name="this_is_your_account_overview">Here is a short summary of your activity</string>
    <string name="local">Local</string>
    <string name="no_items">There are no items</string>
    <string name="empty"> </string>
    <string name="no_notifications">There are no notifications</string>
    <string name="hide_notification">Hide notification</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="mark_as_unread">Mark as unread</string>
    <string name="notifications">Notifications</string>
    <string name="notification">Notification</string>
    <string name="new_notification_title">New notification</string>
    <string name="from_point">From:</string>
    <string name="received_point">Received:</string>
    <string name="description_point">Description:</string>
    <string name="no_notification_info">No information available</string>
    <string name="normal_lesson_received_title">New lesson</string>
    <string name="shared_lesson_received_title">New shared lesson</string>
    <string name="friend_request_received_title">New friend request</string>
    <string name="word_received_title">New word</string>
    <string name="expression_received_title">New expression</string>
    <string name="nothing_here">Nothing here</string>
    <string name="friend_request_received_description">You\'ve received a new friend request from</string>
    <string name="normal_lesson_received_description_1">You\'ve received the lesson</string>
    <string name="normal_lesson_received_description_2">You can find it in your received lessons.</string>
    <string name="word_received_description_1">You\'ve received the word</string>
    <string name="word_received_description_2">You can find it in your received words.</string>
    <string name="expression_received_description_1">You\'ve received the expression</string>
    <string name="expression_received_description_2">You can find it in your received expressions.</string>
    <string name="shared_lesson_received_description_1">You\'ve received access to the shared lesson</string>
    <string name="shared_lesson_received_description_2">You can find it in your shared lessons.</string>
    <string name="friend_request_accepted_title">Friend request accepted</string>
    <string name="friend_request_accepted_description_1">User</string>
    <string name="friend_request_accepted_description_2">accepted your request.</string>
    <string name="friend_removed_you_title">Friend removed</string>
    <string name="friend_removed_you_description_1">User</string>
    <string name="friend_removed_you_description_2">removed you from his friend list. You are no longer friends.</string>
    <string name="you_removed_friend_title">You removed a friend</string>
    <string name="you_removed_friend_description_1">You removed user</string>
    <string name="you_removed_friend_description_2">from your friend list.</string>
    <string name="friend_request_sent_title">Friend request sent</string>
    <string name="friend_request_sent_description_1">You sent a friend request to the user</string>
    <string name="friend_request_sent_description_2">. We will notify you when the request is accepted.</string>
    <string name="normal_lesson_sent_title">Lesson sent</string>
    <string name="shared_lesson_sent_title">Common lesson sent</string>
    <string name="normal_lesson_sent_description_1">You sent the lesson</string>
    <string name="normal_lesson_sent_description_2">.</string>
    <string name="shared_lesson_sent_description_1">You sent the common lesson</string>
    <string name="shared_lesson_sent_description_2">.</string>
    <string name="message_point">Message:</string>
    <string name="error_accept_request">Request can not be accepted. Please try again later.</string>
    <string name="accepting_request">Accepting request</string>
    <string name="close">Close</string>
    <string name="name_point">Name:</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="friend_request_sent">Friend request was send</string>
    <string name="accept_friend_request">Accept friend request</string>
    <string name="delete">Delete</string>
    <string name="notebook">Notebook</string>
    <string name="meaning">Meaning</string>
    <string name="examples">Examples</string>
    <string name="share">Share</string>
    <string name="show_all">Show all</string>
    <string name="show_only_finished">Show only finished</string>
    <string name="show_only_in_progress">Show only in progress</string>
    <string name="show_all_local">Show all local</string>
    <string name="show_only_local_finished">Show only local finished</string>
    <string name="show_only_local_in_progress">Show only local in progress</string>
    <string name="show_online">Show common</string>
    <string name="show_local_personal_and_received">Show local (personal and received)</string>
    <string name="show_personal">Show personal</string>
    <string name="show_received">Show received</string>
    <string name="show_shared">Show common</string>
    <string name="profile_info">Profile info</string>
    <string name="all">All</string>
    <string name="word_info">Current values</string>
</resources>