<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_menu_nav_drawer_activity_main"
            android:title="@string/home"
            android:icon="@drawable/ic_baseline_home_24"/>
        <item
            android:id="@+id/nav_account_menu_nav_drawer_activity_main"
            android:title="@string/account"
            android:icon="@drawable/ic_baseline_profile_24"/>
        <item
            android:id="@+id/nav_community_menu_nav_drawer_activity_main"
            android:title="@string/community"
            android:icon="@drawable/ic_baseline_community_24"/>
        <item
            android:id="@+id/nav_lessons_menu_nav_drawer_activity_main"
            android:title="@string/notebook"
            android:icon="@drawable/ic_baseline_lessons_24"/>
        <item
            android:id="@+id/nav_test_menu_nav_drawer_activity_main"
            android:title="@string/test"
            android:icon="@drawable/ic_baseline_test_24"/>
        <item
            android:id="@+id/nav_settings_menu_nav_drawer_activity_main"
            android:title="@string/settings"
            android:icon="@drawable/ic_baseline_settings_24"/>
        <item
            android:id="@+id/nav_logout_menu_nav_drawer_activity_main"
            android:title="@string/logout"
            android:icon="@drawable/ic_baseline_logout_24"/>
    </group>

</menu>