<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_menu_nav_drawer_activity_guest"
            android:title="@string/home"
            android:icon="@drawable/ic_baseline_home_24"/>
        <item
            android:id="@+id/nav_login_menu_nav_drawer_activity_guest"
            android:title="@string/login"
            android:icon="@drawable/ic_baseline_login_24"/>
        <item
            android:id="@+id/nav_lessons_menu_nav_drawer_activity_guest"
            android:title="@string/notebook"
            android:icon="@drawable/ic_baseline_lessons_24"/>
        <item
            android:id="@+id/nav_test_menu_nav_drawer_activity_guest"
            android:title="@string/test"
            android:icon="@drawable/ic_baseline_test_24"/>
        <item
            android:id="@+id/nav_settings_menu_nav_drawer_activity_guest"
            android:title="@string/settings"
            android:icon="@drawable/ic_baseline_settings_24"/>
    </group>

</menu>