<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_guest_activity"
            android:title="@string/home"
            android:icon="@drawable/ic_baseline_home_24"/>
        <item
            android:id="@+id/nav_login_guest_activity"
            android:title="@string/login"
            android:icon="@drawable/ic_baseline_login_24"/>
    </group>


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lessons_guest_activity"
            android:title="@string/lessons"
            android:icon="@drawable/ic_baseline_lessons_24"/>
        <item
            android:id="@+id/nav_test_guest_activity"
            android:title="@string/test"
            android:icon="@drawable/ic_baseline_test_24"/>
        <item
            android:id="@+id/nav_settings_guest_activity"
            android:title="@string/settings"
            android:icon="@drawable/ic_baseline_settings_24"/>
        <item
            android:id="@+id/nav_help_guest_activity"
            android:title="@string/help"
            android:icon="@drawable/ic_baseline_help_24"/>
    </group>


</menu>