<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <item-->
<!--        android:title="Home">-->
<!--        <menu>-->
<!--            <group android:checkableBehavior="single">-->
<!--                <item-->
<!--                    android:id="@+id/nav_home"-->
<!--                    android:title="@string/home"/>-->
<!--                <item-->
<!--                    android:id="@+id/nav_login"-->
<!--                    android:title="@string/login"/>-->
<!--                <item-->
<!--                    android:id="@+id/nav_account"-->
<!--                    android:title="@string/account"/>-->
<!--                <item-->
<!--                    android:id="@+id/nav_community"-->
<!--                    android:title="@string/community"/>-->
<!--            </group>-->
<!--        </menu>-->
<!--     </item>-->

<!--    <item-->
<!--        android:title="App">-->
<!--        <menu>-->
<!--            <group android:checkableBehavior="single">-->
<!--                <item-->
<!--                    android:id="@+id/nav_lessons"-->
<!--                    android:title="@string/lessons"/>-->
<!--                <item-->
<!--                    android:id="@+id/nav_test"-->
<!--                    android:title="@string/test"/>-->
<!--                <item-->
<!--                    android:id="@+id/nav_settings"-->
<!--                    android:title="@string/settings"/>-->
<!--                <item-->
<!--                    android:id="@+id/nav_help"-->
<!--                    android:title="@string/help"/>-->
<!--            </group>-->
<!--        </menu>-->
<!--    </item>-->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_login"
            android:title="@string/login"/>
        <item
            android:id="@+id/nav_account"
            android:title="@string/account"/>
        <item
            android:id="@+id/nav_community"
            android:title="@string/community"/>
    </group>


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lessons"
            android:title="@string/lessons"/>
        <item
            android:id="@+id/nav_test"
            android:title="@string/test"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_help"
            android:title="@string/help"/>
    </group>


</menu>