<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/parent_layout_include_layout_action_mode_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_select_include_layout_action_mode_user"
            style="@style/AppTheme.ButtonStyle.ActionModeButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:drawableTop="@drawable/ic_baseline_unchecked_circle_24"
            android:text="@string/all" />

        <Button
            android:id="@+id/btn_delete_include_layout_action_mode_user"
            style="@style/AppTheme.ButtonStyle.ActionModeButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:drawableTop="@drawable/ic_baseline_delete_24"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btn_share_include_layout_action_mode_user"
            style="@style/AppTheme.ButtonStyle.ActionModeButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_baseline_share_24"
            android:text="@string/share" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
