<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="displayName"
            type="String" />
        <variable
            name="email"
            type="String" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/profile_info"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profile_layout_dialog_view_user"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            android:theme="@style/AppTheme.ProfileImageStyle"
            app:strokeWidth="0dp"
            app:shapeAppearanceOverlay="@style/AppTheme.ProfileImageShapeAppearanceOverlay" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:gravity="start"
                android:text="@string/name_point"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@{displayName}"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textSize="16sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:gravity="start"
                android:text="@string/email_point"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@{email}"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textSize="16sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/btn_send_friend_request_layout_dialog_view_user"
            style="@style/AppTheme.ButtonStyle.WithBorder.Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/send_friend_request"/>

        <Button
            android:id="@+id/btn_accept_layout_dialog_view_user"
            style="@style/AppTheme.ButtonStyle.WithBorder.Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/accept_friend_request"/>


        <Button
            android:id="@+id/btn_disabled_layout_dialog_view_user"
            style="@style/AppTheme.ButtonStyle.WithBorder.Info.Disabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:drawableEnd="@drawable/ic_baseline_done_24"
            android:drawablePadding="5dp"
            android:text="@string/friend_request_sent"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>